flesh out gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,35 @@
-.vscode/
-.metals/
+### Metals ###
+**/.metals/
+**/.bloop/
+**/project/**/metals.sbt
+
+### VisualStudioCode ###
+**/.vscode/*
+**/!.vscode/settings.json
+**/!.vscode/tasks.json
+**/!.vscode/launch.json
+**/!.vscode/extensions.json
+**/*.code-workspace
+
+# Local History for Visual Studio Code
+**/.history/
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
+**/.ionide
+
+### SBT ###
+# Simple Build Tool
+# http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
+
+**/dist/*
+**/target/
+**/lib_managed/
+**/src_managed/
+**/project/boot/
+**/project/plugins/project/
+**/.history
+**/.cache
+**/.lib/
+
